--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "electron-builder": "^24.9.1",
     "next": "latest",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^4.9.5"
