--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
-  "private": true,
-  "main": "main/index.js",
-  "productName": "ElectronTypescriptNext",
-  "scripts": {
-    "clean": "rimraf dist main renderer/out renderer/.next",
-    "dev": "npm run build-electron && electron .",
-    "build-renderer": "next build renderer",
-    "build-electron": "tsc -p electron-src",
-    "build": "npm run build-renderer && npm run build-electron",
-    "pack-app": "npm run build && electron-builder --dir",
-    "dist": "npm run build && electron-builder",
-    "type-check": "tsc -p ./renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
-  },
-  "dependencies": {
-    "daisyui": "^4.7.2",
-    "electron-is-dev": "^1.2.0",
-    "electron-next": "^3.1.5",
-    "moment": "^2.30.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.18.63",
-    "@types/react": "^16.14.52",
-    "@types/react-dom": "^16.9.24",
-    "autoprefixer": "^10.4.17",
-    "electron": "^27.1.2",
-    "electron-builder": "^24.9.1",
-    "next": "latest",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^4.9.5"
-  },
-  "build": {
-    "asar": true,
-    "files": [
-      "main",
-      "renderer/out"
-    ]
-  }
+    "private": true,
+    "main": "main/index.js",
+    "productName": "Stormhalter Packet Proxy",
+    "author": {
+        "name": "Ken Human",
+        "email": "ken@kenhuman.com"
+    },
+    "name": "stormhalter-proxy",
+    "version": "2.0.0",
+    "scripts": {
+        "clean": "rimraf dist main renderer/out renderer/.next",
+        "dev": "npm run build-electron && electron .",
+        "build-renderer": "next build renderer",
+        "build-electron": "tsc -p electron-src",
+        "build": "npm run build-renderer && npm run build-electron",
+        "pack-app": "npm run build && electron-builder --dir",
+        "dist": "npm run build && electron-builder",
+        "type-check": "tsc -p ./renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
+    },
+    "dependencies": {
+        "daisyui": "^4.7.2",
+        "electron-is-dev": "^1.2.0",
+        "electron-next": "^3.1.5",
+        "moment": "^2.30.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^14.18.63",
+        "@types/react": "^16.14.52",
+        "@types/react-dom": "^16.9.24",
+        "autoprefixer": "^10.4.17",
+        "electron": "^27.1.2",
+        "electron-builder": "^24.9.1",
+        "next": "latest",
+        "postcss": "^8.4.35",
+        "prettier": "^3.2.5",
+        "rimraf": "^3.0.2",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^4.9.5"
+    },
+    "build": {
+        "asar": true,
+        "files": [
+            "main",
+            "renderer/out/**/*"
+        ],
+        "extraFiles": [
+            "bin"
+        ]
+    }
 }
