--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "electron-is-dev": "^1.2.0",
         "electron-next": "^3.1.5",
         "moment": "^2.30.1",
+        "node-active-window": "github:kenhuman/node-active-window",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
