--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "daisyui": "^4.7.2",
         "electron-is-dev": "^1.2.0",
         "electron-next": "^3.1.5",
+        "memoryjs": "^3.5.1",
         "moment": "^2.30.1",
         "node-active-window": "github:kenhuman/node-active-window",
         "react": "^18.2.0",
