--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "electron-is-dev": "^1.2.0",
         "electron-next": "^3.1.5",
         "electron-store": "^8.1.0",
+        "fast-xml-parser": "^4.3.6",
         "memoryjs": "^3.5.1",
         "moment": "^2.30.1",
         "node-active-window": "github:kenhuman/node-active-window",
+        "node-api-dotnet": "^0.7.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
